# lighteningresearch

./: .env.example  .gitignore  .lightning_memory.json  DESIGN.md  LICENSE  README.md  benchmark.py  langgraph.json  pyproject.toml  pytest.ini  run.py  run_experiments.py  sample_tasks.json
.search_cache/: 013329975bd8a5c1.json  02e9f2a7a7571347.json  104a3cee86b82d9a.json  11021b75bd2c4224.json  165017b496482609.json  2e0a7cca66cc7181.json  34eced9e57874edd.json  35a7d77285b1a831.json  3801ba2cad925e4f.json  3a8c6c28e759dc56.json  4618bd4144229c13.json  4e59042905249b9d.json  555f6e4da750b0a0.json  5b130fdea4190255.json  6059fb799c9166fe.json  63beecdb5f32a667.json  6b873b4694409b5d.json  71c0c5e420874843.json  751109f8feabe209.json  778ac458a6e84c0f.json  7ad2bfb3c79b1b6e.json  7c2f4d23fe575d64.json  7d47da7f98f0cdbb.json  9b46d942f565e4e8.json  b224df075b487db6.json  b2b13ca562df3187.json  b644b5796bc91e4b.json  b81b2a066ad05529.json  b9667e0eb4f7956c.json  baffcbb95a143acf.json  c77c9abd4aeb1f8f.json  c8cd8ab4e26c6cdf.json  d8ce99c96b355ee3.json  dabd82b18153d1fa.json  dbf1c29b7d5dabeb.json  dd137dffc9db753c.json  e4e70ba253ff9c64.json  e88ad90761a454c2.json  ecf3af61fe46537d.json  ecf3d3d4da821921.json  (+5 more)
experiment_results/table1/: table1_20260205_165420.md  table1_results_20260205_165420.json
lighteningresearch/: __init__.py  baselines.py  cache.py  config.py  evaluation.py  graph.py  llm_factory.py  memory.py  models.py  nodes.py  state_builder.py  tools.py
tests/: __init__.py  conftest.py  test_evaluation.py  test_experiments.py  test_models.py
(+21 files in other folders)
